[package]
name = "espy"
version = "0.1.0"
authors = ["Zoey Sheffield <me@zoey.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
x11 = { version = "2.18.2", features= [ "xlib" ] }

[dependencies.gtk4]
git = "https://github.com/gtk-rs/gtk4-rs"